--- a/sass/common.sass
+++ b/sass/common.sass
@@ -452,6 +452,7 @@ body
 	.form-input
 		padding: 0 10px
 		width: 100%
+		height: 35px
 		font-family: $raleway
 		font-size: 14px
 		color: #222
@@ -509,3 +510,6 @@ body
 		text-align: center
 		&:hover
 			box-shadow: 0 0 5px 1px rgba(0,0,0,0.5)
+/* Fancybox style */
+.fancybox-wrap, .fancybox-wrap *
+	box-sizing: content-box
