--- a/sass/common.sass
+++ b/sass/common.sass
@@ -244,6 +244,12 @@ body
 				width: 70%
 				height: 1px
 				background-color: #fff
+				transform: scale(0,1)
+				transition: 2s
+			&.animated
+				&:after
+					transform: scale(1,1)
+					transition: 2s
 .portfolio-wrap
 	margin: 0 auto
 	margin-top: 75px
